--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <center>
             <div class="search">
               <input href="#" oninput="inputFunction()" name="search" id="search-box" autocomplete="off" >
-              <a id="cerca" href='#' >cerca</a>
+              <a id="cerca" href='#' type="submit" >cerca</a>
             </div>
             
             
