--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             
             <form action="">
               <div class="search">
-                <input href="#" oninput="inputFunction()" name="search" id="search-box" autocomplete="off" type="submit">
-                <a id="cerca" href='#' type="submit">cerca</a>
+                <input href="#" oninput="inputFunction()" name="search" id="search-box" autocomplete="off" >
+                <a id="cerca" href='#' type="submit" >cerca</a>
               </div>
             </form>
             
