--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="default">
         <title>Contacts</title>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap3.min.css"/>
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
-        <link rel="stylesheet" type="text/css" href="css/style-ios.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap3.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/style-ios.css">
         <style>
 
         .gris {
