--- a/index.html
+++ b/index.html
@@ -365,7 +365,9 @@ hr{
                     <div class="col-xs-4 normal"><a id="grupos" href="#"></a></div>
                     <div class="col-xs-4 text-left invertido" style="display: none;"><a href="#">+</a>&nbsp;</div>
                     <div id="contactos" class="col-xs-4 text-center" style="padding-bottom: 20px; font-weight: bold;"></div>
-                    <div class="col-xs-4 normal text-right"><a href="#">+</a>&nbsp;</div>
+                    <button id="plus" onclick="openFullScreen();">
+                        <div class="col-xs-4 normal text-right"><a href="#">+</a>&nbsp;</div>
+                    </button>
                     <div class="col-xs-4 invertido" style="display: none;"><a id="inv-grupos" href="#"></a></div>
                                         <div class="col-xs-12" id="contact-main-search">
                         <input id="buscar" type="text" class="form-control custom-input">
