--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ hr{
                                                                                                                 <tr><td class="mylink contact_font" data-contact="Vanessa Traetta">Vanessa Traetta<strong></strong><hr></td></tr>
                                                                                                                 <tr><td class="mylink contact_font" data-contact="Viola Trapanese">Viola Trapanese<strong></strong><hr></td></tr>
                                                                                                                 <tr><td class="mylink contact_font" data-contact="Virginia Trapani">Virginia Trapani<strong></strong><hr></td></tr>
-                                                                                                                <tr><td class="mylink contact_font" data-contact="Virginia Trapani">_i<strong></strong><hr></td></tr>
+                                                                                                                <tr><td class="mylink contact_font" data-contact="Virginia Trapani">_<strong></strong><hr></td></tr>
                                                                                                                 <tr><td class="mylink contact_font" data-contact="Virginia Trapani">_<strong></strong><hr></td></tr>
                                                                                                                 
                                                                                                     
