--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@ else if(window.navigator.languages[0].includes('ja')) {
             $('#mensaje').html('message');
             $('#celular').html('call');
             $('#video').html('video');
-            $('#cel').html('iPhone');
+            $('#cel').html('Telefono');
             $('#correo').html('mail');
             $('#notas').html('Notes');
             $('#enviar').html('Send Message');
